Fixed Infinite loop in search bar and changed the justified text to left align

--- a/src/common/NewsBodyPage.module.css
+++ b/src/common/NewsBodyPage.module.css
@@ -74,7 +74,6 @@
 }
 .newsBody{
     padding: 1rem;
-    text-align: justify;
 }
 .summarizeButtonContainer{
     width: 100vw;
