--- a/src/components/TrendingSlider.module.css
+++ b/src/components/TrendingSlider.module.css
@@ -16,7 +16,6 @@
 }
 .newsBody{
     padding: 1rem;
-    text-align: justify;
 }
 .readMore{
     padding: 1rem 1rem 0 1rem;
